<resources>
    <string name="app_name">Forest Tracker</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_field">All field are mandatory</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="details">Details</string>

    <string name="forest_track">फारेस्ट</string>
    <string name="forestArea">वन मण्डल</string>
    <string name="office_name">परिक्षेत्र का नाम</string>
    <string name="location">परिक्षेत्र</string>
    <string name="compartmentNo">कम्पार्टमेंट संख्या</string>
    <string name="plantingArea">रोपण क्षेत्र</string>
    <string name="plantingYear">रोपण वर्ष</string>
    <string name="plantingPlants">रोपित पौधे</string>
    <string name="Submit">जमा करें</string>
    <string name="Stop">बंद करें </string>
    <string name="Start">शुरू करें </string>
    <string name="title_activity_conclusion">ConclusionActivity</string>
    <string name="conclusion">Conclusion</string>
    <string name="file_name">फाइल का नाम : </string>
    <string name="distance">दूरी : </string>
    <string name="area">क्षेत्र : </string>
    <string name="login">लॉग इन करें : </string>
    <string name="deparmanet_str">विभागीय योजना</string>
    <string name="scheme_secon">हरियाली प्रसार योजना</string>
    <string name="hindi">HINDI</string>
    <string name="english">ENGLISH</string>
    <string name="title_activity_maps">Map</string>

    <string name="title_activity_splash">Forest Tracker</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="permission">com.gramin.sakhala.gramintracker.permission.ALLOW</string>
    <string name="kml">KML : </string>
    <string name="scheme_asstes">Asstes</string>
    <string name="SubforestArea">उप वन मण्डल</string>
    <string name="location_helper">परिक्षेत्र सहायक वृत्त</string>
    <string name="beet">बीट</string>
    <string name="forest_type">वन का प्रकार</string>
    <string name="estimate_area">प्रस्तावित क्षेत्रफल</string>
    <string name="platinghelp">रोपण मद</string>
    <string name="planting_type">रोपण प्रकार</string>
    <string name="antral">अंतराल</string>
    <string name="live_plants">जीवित पौधे</string>
    <string name="khasra_no">कक्ष क्रमांक या खसरा क्रमांक</string>
    <string name="name_officer">हितग्राही का नाम</string>
    <string name="year_between">अंतराल</string>
</resources>
