<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="8dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        android:id="@+id/title_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBtn"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/scheme_secon"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/kml_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left"
        android:padding="10dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:maxLines="1"
        android:background="@android:color/white"
        android:text="@string/kml"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/area_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left"
        android:padding="10dp"
        android:background="@android:color/white"
        android:text="@string/area"
        android:textColor="@android:color/black"/>


    <TextView
        android:id="@+id/distance_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left"
        android:padding="10dp"
        android:background="@android:color/white"
        android:text="@string/distance"
        android:textColor="@android:color/black"/>

</LinearLayout>