<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_track"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gramin.sakhala.gramintracker.activity.TrackingActivity">

    <LinearLayout
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:textStyle="bold"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:textColor="@android:color/white" />

        <TextView
            android:textStyle="bold"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/area"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/startAndStopTrack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:background="@color/colorBtn"
        android:text="@string/Start"
        android:textColor="@android:color/white" />


</RelativeLayout>
