<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/fab_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gramin.sakhala.gramintracker.activity.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/details"
            android:textColor="@color/colorBtn"
            android:textSize="@dimen/title_margin"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/line_margin"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:alpha="0.6"
            android:background="@color/colorPrimary" />

        <ScrollView
            android:id="@+id/detail_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:id="@+id/detail_form"
                android:layout_margin="@dimen/fab_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/forestArea"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/forestArea"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/offcerName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/office_name"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/location"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/compartmentNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/compartmentNo"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/plantingArea"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/plantingArea"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/plantingYear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/plantingYear"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/plantingPlants"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/plantingPlants"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>



                <Button
                    android:id="@+id/trackButton"
                    android:elevation="4dp"
                    android:layout_margin="10dp"
                    android:alpha="0.9"
                    android:background="@android:color/darker_gray"
                    android:text="@string/Submit"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
